# iPIC3D-GPU

./: .gitignore  CMakeLists.txt  Dockerfile  README  README.md  iPIC3D.cpp
.github/input/: testGEM2Dsmall.inp
.github/workflows/: cmake-single-platform.yml
benchmark/: .gitignore  Dual-A100_release_baseline.csv  benchmark.sh  build.sh  clean.sh  outputCSV.sh  readme.md
benchmark/GEM3Dsmall_1x1x1_100/: testGEM3Dsmall.inp
benchmark/GEM3Dsmall_2x1x1_100/: testGEM3Dsmall.inp
benchmark/GEM3Dsmall_2x2x1_100/: testGEM3Dsmall.inp
benchmark/GEM3Dsmall_2x2x2_100/: testGEM3Dsmall.inp
benchmark/GEM3Dsmall_4x2x2_100/: testGEM3Dsmall.inp
benchmark/GEM3Dsmall_4x4x2_100/: testGEM3Dsmall.inp
benchmark/GEM3Dsmall_4x4x4_100/: testGEM3Dsmall.inp
benchmark/baseline/: GH200_release_baseline.csv
cudaKernel/: exitingKernel.cu  hashedSum.cu  momentKernel.cu  moverKernel.cu  sortingKernel.cu
fields/: EMfields3D.cpp
grids/: Grid3DCU.cpp
include/: Alloc.h  Basic.h  EMfields3D.h  Grid3DCU.h  Larray.h  Particle.h  Particles3D.h  Particles3Dcomm.h  TimeTasks.h  asserts.h  iPic3D.h  outputPrepare.h
include/CUDA/: arrayCUDA.cuh  cudaTypeDef.cuh  departureArray.cuh  gridCUDA.cuh  hashedSum.cuh  momentKernel.cuh  moverKernel.cuh  particleArrayCUDA.cuh  particleExchange.cuh
inputfiles/: testGEM2Dreal.inp  testGEM2Dsmall.inp  testGEM3Dsmall.inp
inputoutput/: OutputWrapperFPP.cpp  ParallelIO.cpp  outputPrepare.cpp
main/: iPIC3Dlib.cpp  iPIC3Dlib.cu
particles/: Particles3Dcomm.cpp
utility/: Basic.cpp  TimeTasks.cpp  asserts.cpp
verification/: CMakeLists.txt  verification.cpp  verifyOutput.sh
